[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/assets_itens/sprites/sombra.png" type="Texture" id=1]
[ext_resource path="res://assets/assets_enemy/spritesheets/idle.png" type="Texture" id=2]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=3]
[ext_resource path="res://assets/assets_enemy/spritesheets/walk.png" type="Texture" id=4]
[ext_resource path="res://assets/assets_enemy/spritesheets/hit.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 34.0
height = 96.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 76.0
height = 100.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("enemy_img:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("enemy_img:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 21 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("enemy_img:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("animation:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "hit"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("enemy_img:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("enemy_img:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("enemy_img:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 19 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("animation:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "deleting_enemy"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("enemy_img:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("enemy_img:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("enemy_img:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("animation:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("enemy_img:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("enemy_img:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("enemy_img:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("animation:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}

[node name="enemy" type="KinematicBody2D"]
scale = Vector2( 0.75, 0.75 )
collision_layer = 4
collision_mask = 16
script = ExtResource( 3 )
type = 1

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 0, 115 )
scale = Vector2( 3, 2 )
texture = ExtResource( 1 )

[node name="enemy_img" type="Sprite" parent="."]
position = Vector2( 0, 117 )
texture = ExtResource( 2 )
offset = Vector2( -31, -117 )
hframes = 21

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( -1, 29 )
shape = SubResource( 1 )

[node name="enemy_area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="head_shape" type="CollisionShape2D" parent="enemy_area"]
position = Vector2( -51, -29 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="animation" type="AnimationPlayer" parent="."]
autoplay = "walk"
playback_speed = 2.0
anims/RESET = SubResource( 3 )
anims/hit = SubResource( 6 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="ray" type="RayCast2D" parent="."]
position = Vector2( -88, 97 )
scale = Vector2( 2, 2 )
enabled = true
collision_mask = 16

[connection signal="area_entered" from="enemy_area" to="." method="_on_enemy_area_area_entered"]
[connection signal="body_entered" from="enemy_area" to="." method="_on_enemy_area_body_entered"]
